--- a/报错及解决办法.md
+++ b/报错及解决办法.md
@@ -3,11 +3,14 @@ MyBatis 开发中，善用通过 MBG 生成的 *Example 类
 
 1.报错：Execution default-cli of goal org.mybatis.generator:mybatis-generator-maven-plugin:1.3.2:generate failed: Exception getting JDBC Driver: com.mysql.jdbc.Driver （mybatis逆向工程）
 
-解决办法：https://www.cnblogs.com/lwyang/p/9864948.html
+解决办法：
+
+https://www.cnblogs.com/lwyang/p/9864948.html
 
 2.报错：Cannot resolve mysql:mysql-connector-java:8.0.20
 
 解决办法：
+
 https://www.cnblogs.com/hahayixiao/p/13251839.html
 
 https://blog.csdn.net/qq_35488769/article/details/81176741
@@ -15,6 +18,7 @@ https://blog.csdn.net/qq_35488769/article/details/81176741
 3.警告：Cannot obtain primary key information from the database, generated objects may be incomplete
 
 解决办法:
+
 https://blog.csdn.net/babybabyup/article/details/84099469
 
 https://www.jianshu.com/p/dbeeac29ff27
@@ -22,5 +26,6 @@ https://www.jianshu.com/p/dbeeac29ff27
 4.XML中的&使用
 
 解决办法:
+
 https://blog.csdn.net/martinkeith/article/details/85700346
 
